<resources>
    <string name="app_name">Finance tracker</string>
    <string name="renda_fixa">Renda fixa</string>
    <string name="produtos_de_cdb">Produtos de CDB</string>
    <string name="fundos">Fundos</string>
    <string name="fundos_de_a_es_renda_fixa_multimercados_e_outros">Fundos de ações, renda fixa, multimercados e outros</string>
    <string name="renda_vari_vel">Renda variável</string>
    <string name="a_es_b3_bolsa_de_valores">Ações - B3 (Bolsa de valores)</string>
    <string name="planos_vgbl_e_pgbl">Planos VGBL e PGBL</string>
    <string name="previd_ncia_privada">Previdência privada</string>
    <string name="acoes">Ações</string>
    <string name="procurar">Procurar</string>
    <string name="data">Data</string>
    <string name="valor_da_a_o">Valor da ação</string>
    <string name="quantidade">Quantidade</string>
    <string name="tecnica_utilizada_opcional">Tecnica utilizada (Opcional):</string>
    <string name="gr_ficos_analisados_opcional">Gráficos analisados (Opcional):</string>
    <string name="tempo_esperado_de_investimento_opcional">Tempo esperado de investimento (Opcional):</string>
    <string name="o_que_s_o_os_itens_acima">O que são os itens acima?</string>
    <string name="dd_mm_yyyy">dd/mm/YYYY</string>
    <string name="adicionar">Adicionar</string>
    <string name="tecnica_utilizada_description">Este item se refere a qual item de análise gráfica foi utilizada (caso alguma tenha sido), permitindo que possa ser feita uma comparação usando a mesma técnica futuramente.</string>
    <string name="graficos_analisados_description">Neste seria interessante adicionar detalhes dos gráficos analisados, como tipo de gráfico, intervalo do gráfico, entre outros, para facilitar futuras comparações.</string>
    <string name="tempo_esperado_description">O tempo esperado de investimento determina quanto tempo você pretende deixar a operação aberta (dias, semanas, meses, etc.), facilitando, futuramente, a escolha do intervalo do gráfico para analisar sua operação.</string>
    <string name="ajuda">Ajuda</string>
    <string name="qual_a_sua_duvida">Qual a sua dúvida?</string>
    <string name="valor_inicial">Valor inicial</string>
    <string name="money_symbol">R$</string>
    <string name="t_cnica_utilizada">Técnica utilizada: </string>
    <string name="tempo_estimado">Tempo estimado:</string>
    <string name="finalizar_opera_o">Finalizar operação</string>
    <string name="total_gasto">Total gasto:</string>
    <string name="editar_opera_o">Editar operação</string>
    <string name="nenhuma_definida">Nenhuma definida</string>
    <string name="tempo_indeterminado">Tempo indeterminado</string>
    <string name="excluir_opera_o">Excluir operação</string>
    <string name="deletar_operaçao">Deletar operação</string>
    <string name="deletar">Deletar</string>
    <string name="cancelar">Cancelar</string>

    <string name="delete_stock_dialog_message">Deletar a operação fará com que você não tenha mais acesso às informações dela. Preferivelmente você pode finalizar a operação, deixando o resgistro ainda visível, porém identidficado como finalizado.</string>
    <string name="pre_o_final_da_a_o">Preço final da ação</string>
    <string name="indique_o_preco_final_da_acao">Indique o preço final da ação</string>
    <string name="finalizar">Finalizar</string>
    <string name="operacao_finalizada">Operação finalizada </string>
    <string name="insira_um_valor_valido">Insira um valor válido</string>
    <string name="filtrar">Filtrar</string>
    <string name="ordem_alfabetica">Ordem alfabetica</string>
    <string name="pre_o_total_maior_menor">Preço total (maior-menor)</string>
    <string name="pre_o_a_o_maior_menor">Preço ação (maior-menor)</string>
    <string name="somente_finalizadas">Somente finalizadas</string>
    <string name="somente_abertas">Somente abertas</string>
    <string name="todas_acoes">Todas</string>
    <string name="n_o_encontramos_nenhum_item">Não encontramos nenhum item..</string>
    <string name="sucesso">Sucesso</string>
    <string name="total_gasto_2">Total gasto</string>
    <string name="preco_medio">Preço médio: </string>
    <string name="tecnica_utilizada">"Técnica utilizada: "</string>
    <string name="primeira_compra">Primeira compra: </string>
    <string name="lucro">Lucro</string>
    <string name="operacao_aberta">Operação aberta</string>
    <string name="informa_es_adicionais">Informações adicionais</string>
    <string name="total_investido">Total investido</string>
    <string name="item_nao_definido">Item não definido</string>
    <string name="excluir">Excluir</string>
    <string name="adicionar_a_o_es">Adicionar açoões</string>
    <string name="remover_a_es">Remover ações</string>
    <string name="finalizar_opera_o_content">Deseja realmente finalizar a operação? Essa ação não poderá ser desfeita.</string>
    <string name="valor_m_dio_de_suas_a_es">Valor médio de suas ações</string>
    <string name="varia_o_total">Variação total</string>
    <string name="valor_atual">Valor atual</string>
    <string name="detalhes">Detalhes</string>
    <string name="lucro_previsto">Lucro previsto</string>
    <string name="informa_es">Informações</string>
    <string name="variacao_dia">Variação do dia</string>
    <string name="varia_o_m_s">Variação mês</string>
    <string name="varia_o_do_ano">Variação do ano</string>
    <string name="mercado_aberto">Mercado aberto</string>
    <string name="mercado_fechado">Mercado fechado</string>
    <string name="minimo_do_dia">Mínima do dia</string>
    <string name="maxima_do_dia">Máxima do dia</string>
    <string name="sem_internet">Sem internet</string>
    <string name="conectar">Conectar</string>
    <string name="tentar_novamente">Tentar novamente</string>
    <string name="erro_no_servidor">Erro no nosso servidor</string>
    <string name="erro_desconhecido">Erro desconhecido</string>
    <string name="ativo_nao_encontrado">Ativo não encontrado</string>
    <string name="corretora_opcional">Corretora (Opcional)</string>
    <string name="vender">Vender</string>
    <string name="valor_das_novas_a_es">Valor das novas ações</string>
    <string name="quantidade_de_a_es">Quantidade de ações</string>
    <string name="r_45_00">R$ 45.00</string>
    <string name="_45">45</string>
    <string name="_10">+ 10</string>
    <string name="_50">+ 50</string>
    <string name="_100">+ 100</string>

    <string-array name="correotoras">
        <item>Ágora</item>
        <item>Ativa</item>
        <item>Banrisul Corretora</item>
        <item>BTG Pactual</item>
        <item>C6 Bank</item>
        <item>Citibank</item>
        <item>Clear Corretora</item>
        <item>CM Capital</item>
        <item>Easyinvest</item>
        <item>Elite</item>
        <item>Fator</item>
        <item>Genial</item>
        <item>Guide</item>
        <item>H.Commcor</item>
        <item>MyCap</item>
        <item>Banco Inter</item>
        <item>Itaú</item>
        <item>Mercantil</item>
        <item>Mirae Asset</item>
        <item>ModalMais</item>
        <item>Necton</item>
        <item>Nova Futura</item>
        <item>Órama</item>
        <item>Planner</item>
        <item>Safra</item>
        <item>Santander</item>
        <item>Singulare</item>
        <item>Terra Investimentos</item>
        <item>Votorantim corretora</item>
        <item>XP Investimentos</item>
        <item>Rico</item>

    </string-array>

    <string name="no_expected_time">Tempo estimado não definido</string>
    <string name="no_technique_used">Técnica de análise não definida</string>
    <string name="papeis">Papéis</string>
    <string name="valor_medio">Valor médio</string>
    <string name="atualixado_com_sucesso">Atualizado com sucesso</string>
    <string name="per_odo_de_investimento">Período de investimento</string>
    <string name="pre_o_m_dio_e_quantidade">Preço médio e quantidade</string>
    <string name="valor_total_de_investimento">Valor total de investimento</string>
    <string name="permanet_action">Esta ação não podera ser desfeita.</string>
    <string name="item_excluido">Item excluído</string>
    <string name="painel_de_controle">Painel de controle</string>
    <string name="dinheiro_em_a_es">Dinheiro em ações</string>
    <string name="lucro_total">Lucro total</string>
    <string name="a_es_em_aberto">Ações em aberto</string>
    <string name="ltima_a_o">Última ação</string>
    <string name="ver_minhas_a_es">Ver minhas ações</string>
</resources>