<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:text="@string/valor_das_novas_a_es"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sheet_add_stock_edit_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/r_45_00"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:text="@string/quantidade_de_a_es"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/sheet_add_stock_edit_price" />

    <EditText
        android:id="@+id/sheet_add_stock_edit_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/_45"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/sheet_add_stock_edit_price"
        app:layout_constraintStart_toStartOf="@+id/sheet_add_stock_edit_price"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <com.google.android.material.chip.Chip
        android:id="@+id/sheet_add_stock_chip_10"
        android:layout_width="wrap_content"
        android:text="@string/_10"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/sheet_add_stock_edit_quantity"
        app:layout_constraintTop_toBottomOf="@+id/sheet_add_stock_edit_quantity" />

    <com.google.android.material.chip.Chip
        android:id="@+id/sheet_add_stock_chip_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/_50"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/sheet_add_stock_chip_10"
        app:layout_constraintStart_toEndOf="@+id/sheet_add_stock_chip_10"
        app:layout_constraintTop_toTopOf="@+id/sheet_add_stock_chip_10" />

    <com.google.android.material.chip.Chip
        android:id="@+id/sheet_add_stock_chip_100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:padding="8dp"
        android:text="@string/_100"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/sheet_add_stock_chip_50"
        app:layout_constraintStart_toEndOf="@+id/sheet_add_stock_chip_50"
        app:layout_constraintTop_toTopOf="@+id/sheet_add_stock_chip_50" />

    <Button
        android:id="@+id/sheet_add_stock_btn_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/adicionar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sheet_add_stock_chip_10"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>