<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialComponents">

    <TextView
        android:id="@+id/sheet_help_stock_txt_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/ajuda"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <HorizontalScrollView
        android:id="@+id/sheet_help_stock_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sheet_help_stock_txt_help">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/sheet_help_stock_chip_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:chipSpacing="4dp"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/sheet_help_stock_chip_tecnica"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/tecnica_utilizada_opcional"
                android:textColor="@color/black"
                app:chipBackgroundColor="@color/chip_selection_color" />

            <com.google.android.material.chip.Chip
                android:id="@+id/sheet_help_stock_chip_graficos"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/gr_ficos_analisados_opcional"
                android:textColor="@color/black"
                app:chipBackgroundColor="@color/chip_selection_color" />

            <com.google.android.material.chip.Chip
                android:id="@+id/sheet_help_stock_chip_tempo"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/tempo_esperado_de_investimento_opcional"
                android:textColor="@color/black"
                app:chipBackgroundColor="@color/chip_selection_color" />


        </com.google.android.material.chip.ChipGroup>


    </HorizontalScrollView>

    <TextView
        android:id="@+id/sheet_help_stock_txt_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:gravity="start"
        android:minHeight="100dp"
        android:text="@string/qual_a_sua_duvida"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sheet_help_stock_scroll_view"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31" />


</androidx.constraintlayout.widget.ConstraintLayout>